--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
 
         </section>
     </main>
+    <!-- footer section -->
+    <footer>
             <div class="footer-info">
                 <div class="footer-cards">
                     <div class="f-card">
