--- a/index.html
+++ b/index.html
@@ -5,23 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes-Website</title>
+    <!-- style sheet link -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- fontawesome link  -->
+    <script src="https://kit.fontawesome.com/e170ddfb87.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-
-
-        <div class="navbar">
+        <!-- navbar start -->
+         <nav>
             <div class="logo">
                 <img src="images/Logo, Icon/Logo.png" alt="">
             </div>
+            <input type="checkbox" name="" id="check">
+            <label class="menu-btn" for="check">
+                <i class="fa-solid fa-bars"></i>
+            </label>
             <ul>
-                <li><a>Home</a></li>
-                <li><a>Product</a></li>
-                <li><a>About us</a></li>
-                <li><a>Contact us</a></li>
-            </ul>    
-        </div>
+                <li> <a href="#">Home       </a></li>
+                <li> <a href="#">Product    </a></li>
+                <li> <a href="#">About us   </a></li>
+                <li> <a href="#">Contact us </a></li>
+            </ul> 
+         </nav>
+         <!-- navbar-end -->
+
         <!-- banner section -->
         <div class="banner">
             <div class="ban-img">
